--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html
 {
-    font-size: 1.5rem
+    font-size: 1rem;
 }
 
 body
@@ -18,7 +18,8 @@ a
 
 .container
 {
-  padding: 0px 50px;  
+  margin: 0px 50px;
+  padding: 30px;
   background-color: white;
 }
 
@@ -44,6 +45,11 @@ a
   margin: 50px 0px;
 }
 
+.form-description
+{
+  font-size: 1rem;
+}
+
 .divtextarea
 {
   display: block;
@@ -53,6 +59,7 @@ a
 .textarea
 {
   width: 100%;  
+  box-sizing: border-box;
 }
 
 .divbutton
@@ -65,6 +72,7 @@ a
   background-color: white;
   border-radius: 7px;
   border: solid 2px #81e0df;
+  padding: 8px 12px;
 }
 
 .result
